--- a/index.html
+++ b/index.html
@@ -12,13 +12,10 @@
         <div id="pressBtn">
             <a href="game.html"><img src="Images/PRESS_START.gif" id="startimg"></a>
         </div>
-        <div id="fullscreen">
-            <p>Plein ecran recommande : appuyer sur F11</p>
-        </div>
+
     </div>
-    <div id="credits">
-        <p>Credits :<br>Graphismes : Sandy Webert<br>Code : Damien Didrich et Philippe Heard</p>
-    </div>
+
+    <script src="script.js"></script>
 </body>
 
 </html>
