--- a/game.html
+++ b/game.html
@@ -11,6 +11,9 @@
 
     <div id="menu" class="" onclick="pressStart()">
         <img src="Images/titlescreensmall.png" id="logomenu">
+        <div id="musicButtonDiv">
+            <img src="Images/musicON.png" onclick="musicAllow()" id="musicButton">
+        </div>
         <form>
             <fieldset>
                 <legend>PLAYER 1</legend>
