--- a/game.html
+++ b/game.html
@@ -129,12 +129,14 @@
         <div id="perso1div">
             <img src="Images/Spriteperso1.gif" id="perso1" class="animDamage">
             <img src="Images/New_effect.gif" id="aura1">
+            <img src="Images/New_effect.gif" id="aura1sup">
         </div>
         <div id="roundP1"></div>
         <div id="roundP2"></div>
         <div id="perso2div">
             <img src="Images/Spriteperso2.gif" id="perso2" class="">
             <img src="Images/aura.gif" id="aura2">
+            <img src="Images/New_effect.gif" id="aura2sup">
         </div>
     </div>
     <div id="finishDiv">
