--- a/game.html
+++ b/game.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 
-<body id="body" class="menuStyle">
+<body id="body" class="gameStyle">
 
     <div id="menu" class="" onclick="pressStart()">
         <img src="Images/titlescreensmall.png" id="logomenu">
