--- a/game.html
+++ b/game.html
@@ -51,7 +51,7 @@
             </ul>
         </div>
     </div>
-    <div id="container">
+    <div id="container" class="">
         <section id="header">
             <div id="avatarP1">
                 <img src="Images/portraitP1.png" alt="imageP1" id="imageP1">
