--- a/game.html
+++ b/game.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="utf-8">
+    <link rel="icon" type="image/png" sizes="16x16" href="Images/VSico16px.png">
     <title>Script Fighter</title>
     <link rel="stylesheet" href="style.css">
 </head>
