--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="utf-8">
     <title>Script Fighter</title>
+    <link rel="icon" type="image/png" sizes="16x16" href="Images/VSico16px.png">
     <link rel="stylesheet" href="welcomeScreenStyle.css">
 </head>
 
