--- a/game.html
+++ b/game.html
@@ -2,6 +2,11 @@
 <html>
 
 <head>
+    <meta property='og:image' content='images/miniature.png' />
+    <meta property='og:title' content='Script Fighter' />
+    <meta property='og:url' content='https://www.scriptfighter.fr/index.html' />
+    <title>Script Fighter - the Word Warrior</title>
+
     <meta charset="utf-8">
     <link rel="icon" type="image/png" sizes="16x16" href="Images/VSico16px.png">
     <title>Script Fighter</title>
